i did a number of things with basic tags

--- a/sample2.html
+++ b/sample2.html
@@ -1,13 +1,24 @@
 <html>
   <head>
     <title>Trial Edition Without Assistance</title>
-  </head>
+  </head> 
   <body>
+    <p>This is written by <abbr title -"Master>Mr.</abbr>Olasunkanmi Opawoye</p>
+    <p>He is the <acronym title -"chief Execurive Officer">CEO</acronym> of WinWin Kitchen Limited</p>
     <h1>Display The Products</h1>
-    <p>The names of the Products will be showm here</p>
+    <p>1<sup>st</sup> line:The <em>names</em> of the <b><i>Products</i></b> will be showm here </br> Product name could be H<sub>2</sub>O</p>
+    <p><strong>Note:</strong>items may be a bit differnet from what is displayed here</p>
     <h1>Display the Quantity of the product dispalyed above</h1>
-    <p>The available quantity will be dispalyed</p>
+    <p>The available <b><i>quantity</i></b> will be dispalyed</p>
     <h1>Display the Unit Price</h1>
-    <p>The Unit price will be displayed</p>
+    <p>The Unit <b><i>price</i></b> will be displayed</p> 
+    <h2>This is A subheading</h2>
+    <h3>This another heading Under the subheading</h3>
+    <h4>This is A Sub, Sub Underneath the SubSubheading</h4>
+    <p><q>A paragraph is made up of one or more sentences and are self contained, expresing  a unique idea</q></p>
+    <hr/>
+       <blockquote>
+    <p>Texts are easier to understand when they are split into smaller units of texts </br>for better comprehension.</p></blockquote>
+    <p><strong> Pease use a new paragraph each time you are expressing a new idea</strong></p>
   </body>
 </html>
